GREATLY simplified breakpoints and fixed spacing on project view. Enjoy!

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -162,6 +162,10 @@ benefit: their scalability and you don't have to adjust the px value of everythi
   line-height: 1.5;
 }
 
+#deliverables, .resources-section {
+  overflow-y: scroll;
+}
+
 .inline {
   display: inline;
   margin: 0 auto;
@@ -197,12 +201,21 @@ benefit: their scalability and you don't have to adjust the px value of everythi
   clear: both;
 }
 
+.chat-section {
+  height: 640px;
+}
+
+.resources-section {
+  height: 100%;
+}
+
 /*Chat Room Styles ------------------------------------------------------------------*/
 .messages {
-  min-height: 12rem;
+  min-height: 460px;
   overflow-y: scroll;
   word-wrap: break-word;
   padding: 0 1em;
+  max-height: 460px;
 }
 
 .message {
@@ -263,151 +276,25 @@ a.repoNav {
 .fa-trash {
   font-size: 1.5em;
 }
+
 /*Breakpoints (for responsive design) ------------------------------------------------------------------*/
-
-/*Super small devices (Galaxy S5, iPhone 5/SE, potatoes, up to 360px)*/
-@media (min-width: 320px) and (max-width: 991px) {
-  .deliverables-section, .video-chat-section, .chat-section, .resources-section {
-    min-width: 275px;
-    max-width: 320px;
-    margin-top: 1rem;
-    padding: 1rem;
-  }
-
-  video-chat-section {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  #add-repo {
-    width: 60%;
-  }
-
-  .resources-section {
-    height: 100%;
-  }
-
-  .resources-section, .messages {
-    overflow-y: scroll;
-  }
-
-  #deliverables {
-    max-height: 25rem;
-    overflow-y: scroll;
-  }
-
-  .resources-section input {
-    width: 100%;
-  }
-
-
-/*Small devices (iPhone 6/6 Plus, 375px and up)*/
-@media (min-width: 375px) and (max-width: 991px) {
-  .deliverables-section, .video-chat-section, .chat-section, .resources-section  {
-    min-width: 300px;
-    max-width: 375px;
+ /*Below 991px, page resizes to single-column, so we need to make sure the only space is 1rem above each component for proper spacing*/
+@media (max-width: 991px) {
+  .project-view-component {
+    padding: 0;
+    margin: 1rem 0 0 0;
   }
 }
 
-/*Small devices (Nexus 5/6, landscape phones, 425px and up)*/
-@media (min-width: 425px) and (max-width: 991px) {
-  .deliverables-section, .video-chat-section, .chat-section, .resources-section  {
-    min-width: 375px;
-    max-width: 425px;
-  }
-}
-
-/*Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) and (max-width: 991px) {
-  .deliverables-section, .video-chat-section, .chat-section, .resources-section {
-    min-width: 500px;
-    max-width: 576px;
-  }
-
-  #add-repo {
-    width: 60%;
-  }
-
-  #deliverables {
-    max-height: 25rem;
-    overflow-y: scroll;
-  }
-
-  .messages {
-    overflow-y: scroll;
-  }
-
-  .resources-section input {
-    width: 100%;
-  }
-}
-
-/*Medium devices (tablets, 768px and up)*/
-@media (min-width: 768px) and (max-width: 991px) {
-  .deliverables-section, .video-chat-section, .chat-section, .resources-section {
-    min-width: 700px;
-    max-width: 768px;
-  }
-
-  #add-repo {
-    width: 80%;
-  }
-
-  .messages {
-    height: 430px;
-  }
-}
-
-/*Large devices (desktops, 992px and up)*/
+/*Above 991px, page resizes to double-column, so we need to make sure each component has 1rem of space above, the left components .5rem to the right, and the right components .5rem to the left to make a total of 1rem of space in between and 1rem to the sides*/
 @media (min-width: 992px) {
-  .deliverables-section, .chat-section, .resources-section {
+  .project-view-component {
     margin-top: 1rem;
-    max-width: 100%;
   }
-
-  .video-chat-section {
-    padding: 1rem 0 0 0;
+  .project-view-component-left {
+    padding: 0 .5rem 0 0;
   }
-
-  .resources-section {
-    margin: 1em 0 0 1rem;
-  }
-
-  .deliverables-section {
-    margin-right: 0;
-  }
-
-  .chat-section {
-    height: 640px;
-    margin: 1rem 0 0 1rem;
-
-  }
-
-  .video-chat-section {
-    max-width: 100%;
-  }
-
-  #add-repo {
-    width: 85%;
-  }
-
-  #deliberables {
-    height: 29rem;
-  }
-
-  .deliverables-section, .video-chat-section, .resources-section  {
-    height: 775px;
-  }
-
-  .deliverables-section button {
-    margin: .5rem 0;
-  }
-
-  .resources-section input, .resources-section button {
-    margin: .3rem;
-  }
-
-  .messages {
-    height: 430px;
+  .project-view-component-right {
+    padding: 0 0 0 .5rem;
   }
 }
